<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="none"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/Avatar"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_right" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_avatar"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_toLeftOf="@id/iv_1"
                android:src="@mipmap/moren" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/Nick_name"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"

                android:src="@mipmap/arrow_right" />


            <EditText
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_toLeftOf="@id/iv_2"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/Input_Nick_name"
                android:text=""
                android:textSize="15sp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_sex"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:visibility="gone"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/Gender"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"

                android:src="@mipmap/arrow_right" />


            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_toLeftOf="@id/iv_5"
                android:background="@null"
                android:gravity="right"
                android:text="@string/Chose_Gender"
                android:textColor="#979797"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:visibility="gone"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/Age"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"

                android:src="@mipmap/arrow_right" />


            <EditText
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_toLeftOf="@id/iv_6"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/Input_Age"
                android:inputType="number"
                android:text=""
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:visibility="gone"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/Height"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"

                android:src="@mipmap/arrow_right" />


            <EditText
                android:id="@+id/tv_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_toLeftOf="@id/iv_7"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/Input_Height"
                android:inputType="number"
                android:text=""
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:visibility="gone"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/Weight"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_right" />


            <EditText
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_toLeftOf="@id/iv_8"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/Input_Weight"
                android:inputType="number"
                android:text=""
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:visibility="gone"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/City"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"

                android:src="@mipmap/arrow_right" />


            <EditText
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_toLeftOf="@id/iv_9"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/Input_City"
                android:text=""
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:visibility="gone"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/Constellation"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"

                android:src="@mipmap/arrow_right" />


            <TextView
                android:id="@+id/tv_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_toLeftOf="@id/iv_10"
                android:background="@null"
                android:gravity="right"
                android:text="@string/Chose_Constellation"

                android:textColor="#979797"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:visibility="gone"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/Career"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"

                android:src="@mipmap/arrow_right" />


            <EditText
                android:id="@+id/tv_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_toLeftOf="@id/iv_11"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/Input_Career"
                android:text=""
                android:textSize="15sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:visibility="gone"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/Photo_Wall"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"

                android:src="@mipmap/arrow_right" />


            <TextView
                android:id="@+id/tv_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_toLeftOf="@id/iv_12"
                android:background="@null"
                android:gravity="right"
                android:text="@string/Edit_Photo_Wall"
                android:textColor="#979797"
                android:textSize="15sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:visibility="gone"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/Phone_number"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_right" />


            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_toLeftOf="@id/iv_3"
                android:text="@string/Bind_phone_number"
                android:textColor="#979797"

                android:textSize="15sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:visibility="gone"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/Signature"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_right" />


            <EditText
                android:id="@+id/tv_qianming"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_toLeftOf="@id/iv_4"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="right"
                android:hint="@string/Edit_Signature"
                android:singleLine="true"
                android:text=""
                android:textSize="15sp" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|center_horizontal"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/Anything_illegal_is_strictly_prohibited" />
    </LinearLayout>
</ScrollView>