<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_back2"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_30">

        <ImageButton
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@mipmap/arrow_back" />
    </RelativeLayout>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/Login_with_mobile_phone"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/arrow_down"
            android:drawablePadding="8dp"
            android:text="+86"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_30"
            android:background="@android:color/transparent"
            android:hint="@string/Enter_phone_number"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="17sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@color/color_F5F5F5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/verification_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/Enter_verification_code" />

        <TextView
            android:id="@+id/verification_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_weight="2"
            android:background="@drawable/regedit_bg"
            android:gravity="center"
            android:text="@string/Send_code"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"

        android:layout_marginRight="@dimen/dp_30"
        android:background="@color/color_F5F5F5" />

    <EditText
        android:id="@+id/pwd_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@android:color/transparent"
        android:hint="@string/Enter_new_password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"

        android:layout_marginRight="@dimen/dp_30"
        android:background="@color/color_F5F5F5" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/regedit_bg"
        android:gravity="center"
        android:text="@string/Submit"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_15"
        android:text=""
        android:textColor="#878787"
        android:textSize="14sp" />
</LinearLayout>